Web app and pdf processing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,22 @@
-streamlit
-numpy
+openai
 langchain
+langchain_community
+langchain_openai
+langchain_core
+streamlit
+python-dotenv
+langserve
+fastapi
+uvicorn
+sse_starlette
+langchain-ollama
+bs4
+pypdf
+chromadb
+faiss-cpu
+beautifulsoup4
+langchain-groq
+wikipedia
+arxiv
+langchainhub
+groq
